
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {char* mailbox; } ;


 int* b ;
 int exit (int) ;
 size_t i ;
 int memset (int*,int,int) ;
 int perror (char*) ;
 int puts (char*) ;
 size_t recv (int,int*,int,int ) ;
 int send (int,int*,int ,int ) ;
 int snprintf (int*,int,char*,char*,...) ;
 int strlen (int*) ;
 int * strstr (int*,char*) ;
 TYPE_1__ v ;

void auth(int fd, char *user, char *pass){
 memset(b, 0x0, 1024);
 snprintf(b, 1023, "1 LOGIN \"%s\" \"%s\"\n", user, pass);
 if(send(fd, b, strlen(b), 0) == -1){
  perror("[-] send()");
  exit(1);
 }
 memset(b, 0x0, 1024);
 i = recv(fd, b, 1023, 0);
 b[i] = 0x0;
 if(strstr(b, "Completed") == ((void*)0)){
  puts("[-] LOGIN failled.");
  exit(1);
 }
 memset(b, 0x0, 1024);
 snprintf(b, 1023, "2 SELECT \"%s\"\n", v.mailbox);
 if(send(fd, b, strlen(b), 0) == -1){
  perror("[-] send()");
  exit(1);
 }
 memset(b, 0x0, 1024);
 while((i = recv(fd, b, 1023, 0)) != -1){
  b[i] = 0x0;
  if(strstr(b, "Completed") != ((void*)0))
   break;
  if(strstr(b, "Couldn't") != ((void*)0)){
   puts("[-] SELECT failled.");
   exit(1);
  }
 }
 puts("[+] authentification: completed.");
 return;
}
