; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_1209.c_auth.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_1209.c_auth.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i8* }

@b = common dso_local global i32* null, align 8
@.str = private unnamed_addr constant [19 x i8] c"1 LOGIN \22%s\22 \22%s\22\0A\00", align 1
@.str.1 = private unnamed_addr constant [11 x i8] c"[-] send()\00", align 1
@i = common dso_local global i64 0, align 8
@.str.2 = private unnamed_addr constant [10 x i8] c"Completed\00", align 1
@.str.3 = private unnamed_addr constant [19 x i8] c"[-] LOGIN failled.\00", align 1
@.str.4 = private unnamed_addr constant [15 x i8] c"2 SELECT \22%s\22\0A\00", align 1
@v = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@.str.5 = private unnamed_addr constant [9 x i8] c"Couldn't\00", align 1
@.str.6 = private unnamed_addr constant [20 x i8] c"[-] SELECT failled.\00", align 1
@.str.7 = private unnamed_addr constant [33 x i8] c"[+] authentification: completed.\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @auth(i32 %0, i8* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  store i32 %0, i32* %4, align 4
  store i8* %1, i8** %5, align 8
  store i8* %2, i8** %6, align 8
  %7 = load i32*, i32** @b, align 8
  %8 = call i32 @memset(i32* %7, i32 0, i32 1024)
  %9 = load i32*, i32** @b, align 8
  %10 = load i8*, i8** %5, align 8
  %11 = load i8*, i8** %6, align 8
  %12 = call i32 (i32*, i32, i8*, i8*, ...) @snprintf(i32* %9, i32 1023, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0), i8* %10, i8* %11)
  %13 = load i32, i32* %4, align 4
  %14 = load i32*, i32** @b, align 8
  %15 = load i32*, i32** @b, align 8
  %16 = call i32 @strlen(i32* %15)
  %17 = call i32 @send(i32 %13, i32* %14, i32 %16, i32 0)
  %18 = icmp eq i32 %17, -1
  br i1 %18, label %19, label %22

19:                                               ; preds = %3
  %20 = call i32 @perror(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.1, i64 0, i64 0))
  %21 = call i32 @exit(i32 1) #3
  unreachable

22:                                               ; preds = %3
  %23 = load i32*, i32** @b, align 8
  %24 = call i32 @memset(i32* %23, i32 0, i32 1024)
  %25 = load i32, i32* %4, align 4
  %26 = load i32*, i32** @b, align 8
  %27 = call i64 @recv(i32 %25, i32* %26, i32 1023, i32 0)
  store i64 %27, i64* @i, align 8
  %28 = load i32*, i32** @b, align 8
  %29 = load i64, i64* @i, align 8
  %30 = getelementptr inbounds i32, i32* %28, i64 %29
  store i32 0, i32* %30, align 4
  %31 = load i32*, i32** @b, align 8
  %32 = call i32* @strstr(i32* %31, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.2, i64 0, i64 0))
  %33 = icmp eq i32* %32, null
  br i1 %33, label %34, label %37

34:                                               ; preds = %22
  %35 = call i32 @puts(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.3, i64 0, i64 0))
  %36 = call i32 @exit(i32 1) #3
  unreachable

37:                                               ; preds = %22
  %38 = load i32*, i32** @b, align 8
  %39 = call i32 @memset(i32* %38, i32 0, i32 1024)
  %40 = load i32*, i32** @b, align 8
  %41 = load i8*, i8** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @v, i32 0, i32 0), align 8
  %42 = call i32 (i32*, i32, i8*, i8*, ...) @snprintf(i32* %40, i32 1023, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.4, i64 0, i64 0), i8* %41)
  %43 = load i32, i32* %4, align 4
  %44 = load i32*, i32** @b, align 8
  %45 = load i32*, i32** @b, align 8
  %46 = call i32 @strlen(i32* %45)
  %47 = call i32 @send(i32 %43, i32* %44, i32 %46, i32 0)
  %48 = icmp eq i32 %47, -1
  br i1 %48, label %49, label %52

49:                                               ; preds = %37
  %50 = call i32 @perror(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.1, i64 0, i64 0))
  %51 = call i32 @exit(i32 1) #3
  unreachable

52:                                               ; preds = %37
  %53 = load i32*, i32** @b, align 8
  %54 = call i32 @memset(i32* %53, i32 0, i32 1024)
  br label %55

55:                                               ; preds = %75, %52
  %56 = load i32, i32* %4, align 4
  %57 = load i32*, i32** @b, align 8
  %58 = call i64 @recv(i32 %56, i32* %57, i32 1023, i32 0)
  store i64 %58, i64* @i, align 8
  %59 = icmp ne i64 %58, -1
  br i1 %59, label %60, label %76

60:                                               ; preds = %55
  %61 = load i32*, i32** @b, align 8
  %62 = load i64, i64* @i, align 8
  %63 = getelementptr inbounds i32, i32* %61, i64 %62
  store i32 0, i32* %63, align 4
  %64 = load i32*, i32** @b, align 8
  %65 = call i32* @strstr(i32* %64, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.2, i64 0, i64 0))
  %66 = icmp ne i32* %65, null
  br i1 %66, label %67, label %68

67:                                               ; preds = %60
  br label %76

68:                                               ; preds = %60
  %69 = load i32*, i32** @b, align 8
  %70 = call i32* @strstr(i32* %69, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.5, i64 0, i64 0))
  %71 = icmp ne i32* %70, null
  br i1 %71, label %72, label %75

72:                                               ; preds = %68
  %73 = call i32 @puts(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.6, i64 0, i64 0))
  %74 = call i32 @exit(i32 1) #3
  unreachable

75:                                               ; preds = %68
  br label %55

76:                                               ; preds = %67, %55
  %77 = call i32 @puts(i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.7, i64 0, i64 0))
  ret void
}

declare dso_local i32 @memset(i32*, i32, i32) #1

declare dso_local i32 @snprintf(i32*, i32, i8*, i8*, ...) #1

declare dso_local i32 @send(i32, i32*, i32, i32) #1

declare dso_local i32 @strlen(i32*) #1

declare dso_local i32 @perror(i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i64 @recv(i32, i32*, i32, i32) #1

declare dso_local i32* @strstr(i32*, i8*) #1

declare dso_local i32 @puts(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
